--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.3.3",
     "semantic-ui-css": "^2.4.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
