add location ngsw

--- a/angular.json
+++ b/angular.json
@@ -61,7 +61,8 @@
                   "maximumError": "5mb"
                 }
               ],
-              "serviceWorker": true
+              "serviceWorker": true,
+              "ngswConfigPath": "/src/ngsw-config.json"
             }
           }
         },
