--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.6",
-    "@angular/cli": "^7.3.6",
+    "@angular-devkit/build-angular": "^0.13.7",
+    "@angular/cli": "^7.3.7",
     "@angular/compiler-cli": "^7.2.11",
     "@angular/language-service": "^7.2.11",
     "@types/jasmine": "~2.8.8",
@@ -51,5 +51,8 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
+  },
+  "optionalDependencies": {
+    "fsevents": "*"
   }
 }
